renaming textChannelID and threadID parameters
